--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "react-native": "^0.4.1"
+    "react-native": "^0.4.1",
+    "react-native-button": "^1.1.0",
+    "react-native-overlay": "^0.1.7"
   }
 }
