--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "react-native": "^0.4.1",
+    "react-native": "^0.4.4",
     "react-native-button": "^1.2.0",
     "react-native-grid-view": "^0.3.6",
-    "react-native-overlay": "^0.1.7",
-    "react-native-router": "^0.1.3"
+    "react-native-overlay": "^0.2.2",
+    "react-native-router": "^0.1.3",
+    "react-native-tween-animation": "^1.0.1"
   }
 }
